# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import { annunciRouter } from "./annunci";
+import { categorieRouter } from "./categorie";
+import { statsRouter } from "./stats";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/annunci", annunciRouter);
+router.use("/categorie", categorieRouter);
+router.use("/stats", statsRouter);
 
 export default router;
